--- a/app/features/Details/NewArticle/newarticle.view.html
+++ b/app/features/Details/NewArticle/newarticle.view.html
@@ -94,14 +94,15 @@
                                                 </div>
                                             </div>
                                             <div class="col-lg-6 col-sm-6 col-md-6 col-xs-6" ng-if="article.imagesOptions.gallery.length  == 0">
-                                                <p class="font-medium font-bold color-blue">GALLERIA</p>
+                                                <p class="font-medium font-bold color-blue pull-left">GALLERIA</p>
                                                 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 div-icon">
                                                     <button class="btn btn-blue-icon margin-top-15px" ng-click="article.openGalleryImage()"><span class="lsf font-medium">ok</span>&nbsp;&nbsp;&nbsp;SELEZIONA</button>
                                                 </div>
                                             </div>
 
                                             <div class="col-lg-6 col-sm-6 col-md-6 col-xs-6" ng-if="article.imagesOptions.gallery.length > 0">
-                                                <p class="font-medium font-bold color-blue">GALLERIA</p>
+                                                <p class="font-medium font-bold color-blue pull-left">GALLERIA</p>
+                                                <p class="font-medium font-bold color-blue pull-right" style="text-decoration: underline;" ng-click="article.openGalleryImage()">SELEZIONA</p>
                                                 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 div-gallery">
                                                     <!--<button class="btn btn-blue-icon margin-top-15px" ng-click="article.openGalleryImage()"><span class="lsf font-medium">ok</span>&nbsp;&nbsp;&nbsp;SELEZIONA</button>-->
                                                     <div class="row container-fluid container-scroll cont-gallery" >
@@ -140,11 +141,11 @@
                                 <!-------- END --------->
                                 <div class="row" style="margin-top: 70px">
                                     <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-                                        <button class="btn btn-info btn-delete-settings" >CESTINA</button>
-                                        <button class="btn btn-info btn-block-settings">CONVERTI IN BOZZA</button>
+                                        <button class="btn btn-delete-settings" >CESTINA</button>
+                                        <button class="btn btn-block-settings">CONVERTI IN BOZZA</button>
 
-                                        <button class="btn btn-info btn-pubblica-settings pull-right">PUBBLICA</button>
-                                        <button class="btn btn-info btn-save-bozza-settings pull-right">SALVA BOZZA</button>
+                                        <button class="btn btn-pubblica-settings pull-right">PUBBLICA</button>
+                                        <button class="btn btn-save-bozza-settings pull-right">SALVA BOZZA</button>
                                     </div>
                                 </div>
 
@@ -230,11 +231,11 @@
                                 <!-------- END --------->
                                 <div class="row" style="margin-top: 70px">
                                     <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-                                        <button class="btn btn-info btn-delete-settings" >CESTINA</button>
-                                        <button class="btn btn-info btn-block-settings">CONVERTI IN BOZZA</button>
+                                        <button class="btn btn-delete-settings" >CESTINA</button>
+                                        <button class="btn btn-block-settings">CONVERTI IN BOZZA</button>
 
-                                        <button class="btn btn-info btn-pubblica-settings pull-right">PUBBLICA</button>
-                                        <button class="btn btn-info btn-save-bozza-settings pull-right">SALVA BOZZA</button>
+                                        <button class="btn btn-pubblica-settings pull-right">PUBBLICA</button>
+                                        <button class="btn btn-save-bozza-settings pull-right">SALVA BOZZA</button>
                                     </div>
                                 </div>
 
@@ -346,11 +347,11 @@
                                 <!-------- END --------->
                                 <div class="row" style="margin-top: 70px">
                                     <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-                                        <button class="btn btn-info btn-delete-settings" >CESTINA</button>
-                                        <button class="btn btn-info btn-block-settings">CONVERTI IN BOZZA</button>
+                                        <button class="btn btn-delete-settings" >CESTINA</button>
+                                        <button class="btn btn-block-settings">CONVERTI IN BOZZA</button>
 
-                                        <button class="btn btn-info btn-pubblica-settings pull-right">PUBBLICA</button>
-                                        <button class="btn btn-info btn-save-bozza-settings pull-right">SALVA BOZZA</button>
+                                        <button class="btn btn-pubblica-settings pull-right">PUBBLICA</button>
+                                        <button class="btn btn-save-bozza-settings pull-right">SALVA BOZZA</button>
                                     </div>
                                 </div>
 
