--- a/app/features/Details/NewArticle/newarticle.view.html
+++ b/app/features/Details/NewArticle/newarticle.view.html
@@ -61,8 +61,8 @@
                 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
                     <div class="form-group row border-bottom-grey">
                         <p class="font-small color-grey pull-left" for="name_current">IN SINTESI</p>
-                        <p class="font-small color-grey pull-right">{{article.current.abstract.length || 0}} / 280</p>
-                        <textarea maxlength="280" rows="1" msd-elastic class="form-control new-channel-name"  ng-model="article.current.abstract" placeholder="Sintesi del contenuto" id="name_channel" type="text"></textarea>
+                        <p class="font-small color-grey pull-right">{{article.current.ds_abstract.length || 0}} / 280</p>
+                        <textarea maxlength="280" rows="1" msd-elastic class="form-control new-channel-name"  ng-model="article.current.ds_abstract" placeholder="Sintesi del contenuto" id="name_channel" type="text"></textarea>
                     </div>
                 </div>
             </div>
@@ -102,7 +102,7 @@
 
                                             <div class="col-lg-6 col-sm-6 col-md-6 col-xs-6" ng-if="article.imagesOptions.gallery.length > 0">
                                                 <p class="font-medium font-bold color-blue pull-left">GALLERIA</p>
-                                                <p class="font-medium font-bold color-blue pull-right" style="text-decoration: underline;" ng-click="article.openGalleryImage()">SELEZIONA</p>
+                                                <p class="font-medium font-bold color-green pull-right" style="text-decoration: underline;" ng-click="article.openGalleryImage()">AGGIUNGI</p>
                                                 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 div-gallery">
                                                     <!--<button class="btn btn-blue-icon margin-top-15px" ng-click="article.openGalleryImage()"><span class="lsf font-medium">ok</span>&nbsp;&nbsp;&nbsp;SELEZIONA</button>-->
                                                     <div class="row container-fluid container-scroll cont-gallery" >
@@ -141,11 +141,11 @@
                                 <!-------- END --------->
                                 <div class="row" style="margin-top: 70px">
                                     <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-                                        <button class="btn btn-delete-settings" >CESTINA</button>
-                                        <button class="btn btn-block-settings">CONVERTI IN BOZZA</button>
+                                        <button class="btn btn-delete-settings" ng-if="!article.current.isNew">CESTINA</button>
+                                        <button class="btn btn-block-settings" ng-if="!article.current.isNew">CONVERTI IN BOZZA</button>
 
                                         <button class="btn btn-pubblica-settings pull-right">PUBBLICA</button>
-                                        <button class="btn btn-save-bozza-settings pull-right">SALVA BOZZA</button>
+                                        <button class="btn btn-save-bozza-settings pull-right" ng-click="article.saveDraft()">SALVA BOZZA</button>
                                     </div>
                                 </div>
 
@@ -179,8 +179,8 @@
                                     <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
                                         <div class="form-group border-bottom-grey">
                                             <p class="font-small color-grey pull-left" for="title_article">TITOLO</p>
-                                            <p class="font-small color-grey pull-right">{{article.current.title.length || 0}} / 70</p>
-                                            <textarea maxlength="70" rows="1" msd-elastic class="form-control new-channel-title"  ng-model="article.current.title" placeholder="Titolo dell'articolo" id="title_article" type="text"></textarea>
+                                            <p class="font-small color-grey pull-right">{{article.current.ds_title.length || 0}} / 70</p>
+                                            <textarea maxlength="70" rows="1" msd-elastic class="form-control new-channel-title"  ng-model="article.current.ds_title" placeholder="Titolo dell'articolo" id="title_article" type="text"></textarea>
                                         </div>
                                     </div>
                                 </div>
@@ -191,7 +191,7 @@
                                             <div class="row no-padding no-margin">
                                                 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 no-padding no-margin">
                                                     <p class="font-small color-grey pull-left" for="description_article">TESTO</p>
-                                                    <p class="font-small color-grey pull-right">{{article.stripHTMLCount(article.current.description) || 0}}</p>
+                                                    <p class="font-small color-grey pull-right">{{article.stripHTMLCount(article.current.ds_description) || 0}}</p>
                                                 </div>
                                             </div>
                                             <!--<textarea rows="1" msd-elastic class="form-control new-channel-name"  ng-model="article.current.description" placeholder="Titolo dell'articolo" id="description_article" type="text"></textarea>-->
@@ -199,7 +199,7 @@
                                             <div class="row no-padding no-margin margin-top-15px">
                                                 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 no-padding no-margin">
                                                     <!--<trix-editor angular-trix ng-model="article.current.description"></trix-editor>-->
-                                                    <ng-quill-editor ng-model="article.current.description" placeholder="Inserisci il test dell'articolo">
+                                                    <ng-quill-editor ng-model="article.current.ds_description" placeholder="Inserisci il test dell'articolo">
                                                         <ng-quill-toolbar>
                                                             <div>
                                                                 <span class="ql-formats">
@@ -231,11 +231,11 @@
                                 <!-------- END --------->
                                 <div class="row" style="margin-top: 70px">
                                     <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-                                        <button class="btn btn-delete-settings" >CESTINA</button>
-                                        <button class="btn btn-block-settings">CONVERTI IN BOZZA</button>
+                                        <button class="btn btn-delete-settings" ng-if="!article.current.isNew">CESTINA</button>
+                                        <button class="btn btn-block-settings" ng-if="!article.current.isNew">CONVERTI IN BOZZA</button>
 
                                         <button class="btn btn-pubblica-settings pull-right">PUBBLICA</button>
-                                        <button class="btn btn-save-bozza-settings pull-right">SALVA BOZZA</button>
+                                        <button class="btn btn-save-bozza-settings pull-right" ng-click="article.saveDraft()">SALVA BOZZA</button>
                                     </div>
                                 </div>
 
@@ -347,11 +347,11 @@
                                 <!-------- END --------->
                                 <div class="row" style="margin-top: 70px">
                                     <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-                                        <button class="btn btn-delete-settings" >CESTINA</button>
-                                        <button class="btn btn-block-settings">CONVERTI IN BOZZA</button>
+                                        <button class="btn btn-delete-settings" ng-if="!article.current.isNew">CESTINA</button>
+                                        <button class="btn btn-block-settings" ng-if="!article.current.isNew">CONVERTI IN BOZZA</button>
 
                                         <button class="btn btn-pubblica-settings pull-right">PUBBLICA</button>
-                                        <button class="btn btn-save-bozza-settings pull-right">SALVA BOZZA</button>
+                                        <button class="btn btn-save-bozza-settings pull-right" ng-click="article.saveDraft()">SALVA BOZZA</button>
                                     </div>
                                 </div>
 
