--- a/app/features/Media/media.view.html
+++ b/app/features/Media/media.view.html
@@ -108,7 +108,7 @@
 
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="row container-fluid container-scroll">
-                <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6" ng-repeat="m in mediaCtrl.medias" style="height: 140px;">
+                <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6" ng-repeat="m in mediaCtrl.medias" style="height: 140px;margin-top:10px;">
                     <!--- images -->
                     <div ng-if="m.type == 'IMAGE'" afkl-lazy-image="{{mediaCtrl.getMediaUrl(m)}}"
                          class="afkl-lazy-wrapper afkl-img-ratio-1-1 own-classname img-responsive" ng-click="mediaCtrl.selectImage(m)"></div>
