--- a/app/features/Contenuti/contenuti.view.html
+++ b/app/features/Contenuti/contenuti.view.html
@@ -151,9 +151,12 @@
                                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
                                     <div class="row no-padding">
                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                            <img ng-if="!article.image_cover" class="img-preview-article bgcolor-grey"/>
-                                            <div ng-if="article.image_cover" class="img-preview-article"
+
+                                            <div ng-if="article.image_cover && article.image_cover.type == 'IMAGE'" class="img-preview-article"
                                                  style="background-image: url({{article.coverUrl('s')}});background-repeat: no-repeat;background-size: contain;"/>
+                                            <!--<div ng-if="article.image_cover && article.image_cover.type == 'VIDEO'" class="img-preview-article"
+                                                 style="background-image: url({{article.coverUrl('s')}});background-repeat: no-repeat;background-size: contain;"/>-->
+                                            <embed-video ng-if="article.image_cover && article.image_cover.type == 'VIDEO'" iframe-id="vimeo{{$index}}" width="110%" height="100px" api="1" player_id="vimeo1" ng-href="{{article.coverUrl()}}"></embed-video>
                                         </div>
                                     </div>
                                 </div>
