--- a/app/features/Details/NewArticle/newarticle.view.html
+++ b/app/features/Details/NewArticle/newarticle.view.html
@@ -373,14 +373,14 @@
             </div>
 
             <br />
-            <div class="row" ng-if="article.current.isNew">
+            <div class="row" ng-if="!article.current.isNew">
                 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 no-magin no-padding">
                     <div class="row">
                         <div class="col-lg-3 col-sm-4 col-md-3 col-xs-6">
-                            <button class="btn btn-blue-full" style="padding:10px" ui-sref="home.commenti">
+                            <button class="btn btn-blue-full" style="padding:10px" ui-sref="home.commenti({id: article.current._id})">
                                 <i class="fa fa-comment-o" style="font-weight: bold" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;GESTISCI COMMENTI</button>
                         </div>
-                        <div class="col-lg-3 col-sm-4 col-md-3 col-xs-6">
+                        <div class="col-lg-3 col-sm-4 col-md-3 col-xs-6" ng-if="article.current.isReported">
                             <img src="app/assets/images/alert.jpg" width="35px" class="pull-left"/>
                             <p src="app/assets/images/alert.jpg" width="35px" class="pull-left color-smart font-bold" style="margin-left:10px">
                                 RICHIESTA<BR>DI MODERAZIONE
@@ -388,6 +388,8 @@
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-4"></div>
                     </div>
+                    <br />
+                    <br />
                 </div>
             </div>
 
