--- a/app/features/Details/NewArticle/Commenti/commenti.view.html
+++ b/app/features/Details/NewArticle/Commenti/commenti.view.html
@@ -16,47 +16,6 @@
     <div class="row page_content" style="padding-left:15px">
         <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 no-margin">
 
-            <!--
-            <div class="row" style="margin-top:25px !important;">
-
-                <div class="col-lg-4 col-md-3 col-sm-6 col-xs-6 no-padding-left">
-
-                    <div class="form-group">
-                        <label class="font-small color-grey">CANALE</label>
-                        <input class="form-control new-channel-author table-day-text" placeholder="email" type="text" ng-model="newchannel.new_channel.username">
-                    </div>
-
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 no-padding-left">
-                    <div class="form-group">
-                        <label class="font-small color-grey">AUTORE</label>
-                        <ui-select class="community-ui-select" ng-model="article.options.authorSelected">
-                            <ui-select-match placeholder="Seleziona...">{{$select.selected}}</ui-select-match>
-                            <ui-select-choices repeat="author in article.options.channelSelected.authorList() | filter: $select.search track by $index">
-                                <span ng-bind="author"></span>
-                            </ui-select-choices>
-                        </ui-select>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 no-padding-left">
-                    <div class="form-group border-line">
-                        <label class="font-small color-grey" style="white-space:nowrap;">CATEGORIA CONSIGLIATA</label>
-                        <ui-select class="community-ui-select" ng-model="article.options.categorySelected">
-                            <ui-select-match placeholder="Seleziona...">{{$select.selected.ds_name}}</ui-select-match>
-                            <ui-select-choices repeat="cat in article.categoryService.list | filter: $select.search track by $index">
-                                <span ng-bind="cat.ds_name"></span>
-                            </ui-select-choices>
-                        </ui-select>
-                    </div>
-                </div>
-
-                <div class="col-lg-2 col-md-3 col-sm-6 col-xs-6">
-                    <img class="img-medium margin-top-20px pull-right" src="app/assets/images/alert.jpg"/>
-                </div>
-
-            </div>
-            -->
-
             <div class="row">
                 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 border-bottom-grey no-padding margin-top-15px margin-bottom-30px">
                     <p class="font-xxl color-black no-margin"><span>{{commenti.articleSelected.commentsCount()}}</span> commenti</p>
@@ -65,7 +24,7 @@
                 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
 
                     <div class="row border-bottom-grey" ng-repeat="com in commenti.articleSelected.commentList()" style="margin-bottom:10px;">
-                        <div class="col-lg-6 col-sm-6 col-md-6 col-xs-6 margin-bottom-20px">
+                        <div class="col-lg-5 col-sm-5 col-md-5 col-xs-4 margin-bottom-20px">
                             <div class="row">
                                 <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1 no-padding no-margin">
                                     <span class='lsf font-xl color-mid-grey margin-left-10px'>arrowright</span>
@@ -76,10 +35,10 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1 no-padding no-margin margin-top-10px">
-                                    <img class="img-medium margin-top-10px" src="app/assets/images/alert.jpg" ng-if="com.reports && com.reports.length > 0"/>
+                                    <img class="img-medium margin-top-10px" src="app/assets/images/alert.jpg" ng-if="commenti.showAlert(com)"/>
                                 </div>
                                 <div class="col-lg-11 col-sm-11 col-md-11 col-xs-11 no-padding no-margin">
-                                    <p class="margin-first-col">{{'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mauris justo, gravida eu gravida eu, volutpat vel magna. Mauris turpis eros, convallis ut lacus eu, luctus scelerisque mauris. Morbi viverra sapien sodales turpis sodales, eget fringilla nunc consequat. Cras eget auctor ante, sed pulvinar mi. Nullam at metus quam. Cras sit amet egestas felis. Pellentesque eleifend convallis velit, sed fermentum massa convallis scelerisque. Morbi quis leo id augue tristique varius eu et orci. Mauris commodo enim leo, at mattis libero pretium sed. Aliquam erat volutpat. Nullam bibendum feugiat luctus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin non aliquet turpis. Aenean tristique est eget erat pulvinar, quis dictum velit consequat. Etiam in fermentum augue.' | limitTo: 150}}</p>
+                                    <p class="margin-first-col" ng-bind-html="commenti.inspectComment(com.ds_comment)"></p>
                                 </div>
                             </div>
                         </div>
@@ -91,7 +50,7 @@
                                 <p class="color-black no-margin-bottom margin-top-5px font-bold">{{com.reports.length || 0}}</p>
                             </div>
                         </div>
-                        <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1">
+                        <div class="col-lg-1 col-sm-1 col-md-1 col-xs-2">
                             <div class="row">
                                 <p class="color-grey font-small no-margin-bottom margin-top-5px">ROBOT</p>
                             </div>
@@ -99,22 +58,34 @@
                                 <p class="color-red no-margin-bottom margin-top-5px font-bold">{{com.is_robot == true ? 'Alert' : ''}}</p>
                             </div>
                         </div>
-                        <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1">
+                        <div class="col-lg-1 col-sm-1 col-md-1 col-xs-2">
                             <div class="row">
                                 <p class="color-grey font-small no-margin-bottom margin-top-5px">STATO</p>
                             </div>
                             <div class="row">
-                                <p ng-if="com.is_enabled" class="color-green no-margin-bottom margin-top-5px font-bold">VISIBLE</p>
-                                <p ng-if="com.is_blocked" class="color-red no-margin-bottom margin-top-5px font-bold">BLOCCATO</p>
+                                <p ng-if="commenti.showVisibile(com)" class="color-green no-margin-bottom margin-top-5px font-bold">VISIBLE</p>
+                                <p ng-if="commenti.showBlocked(com)" class="color-red no-margin-bottom margin-top-5px font-bold">BLOCCATO</p>
                             </div>
                         </div>
-                        <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2">
-                            <ui-select class="community-ui-select font-normal select-grey" ng-model="newchannel.new_channel.category">
-                                <ui-select-match placeholder="Seleziona..">{{$select.selected}}</ui-select-match>
-                                <ui-select-choices repeat="cat in newchannel.categories | filter: $select.search track by $index">
-                                    <span ng-bind="cat"></span>
-                                </ui-select-choices>
-                            </ui-select>
+                        <div class="col-lg-3 col-sm-3 col-md-3 col-xs-2" style="margin-right: 0;">
+                            <div ng-init="com.isOpen = false" class="btn-group pull-right" uib-dropdown is-open="com.isOpen">
+                                <button id="single-button" type="button" class="btn btn-comment-action mydropdown" uib-dropdown-toggle>
+                                    <span class="pull-left">AZIONI</span>
+                                    <span class="pull-right lsf ">dropdown</span>
+                                </button>
+
+                                <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                                    <li role="menuitem" ng-if="commenti.showAlert(com)" ng-click="commenti.visto(com)">
+                                        <a>VISTO</a>
+                                    </li>
+                                    <li role="menuitem" ng-click="commenti.blocca(com)">
+                                        <a>BLOCCA</a>
+                                    </li>
+                                    <li role="menuitem" ng-click="commenti.visibile(com)">
+                                        <a>VISIBILE</a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
 
                         <hr />
