--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
         <script type="text/javascript" src="app/libs/ladda/dist/ladda.min.js"></script>
         <script type="text/javascript" src="app/libs/angular-ladda/dist/angular-ladda.min.js"></script>
         <script type="text/javascript" src="app/libs/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-        <script type="text/javascript" src="app/libs/angular-vimeo-embed/src/angular-vimeo-embed.js"></script>
         <script type="text/javascript" src="app/libs/vimeo-upload/vimeo-upload.js"></script>
         <script type="text/javascript" src="app/libs/angular-aria/angular-aria.js"></script>
         <script type="text/javascript" src="app/libs/angular-animate/angular-animate.min.js"></script>
@@ -79,6 +78,7 @@
         <script type="text/javascript" src="app/libs/ng-file-upload/ng-file-upload.js"></script>
         <script type="text/javascript" src="app/libs/ng-directive-lazy-image/dist/lazy-image.min.js"></script>
         <script type="text/javascript" src="app/libs/ng-videosharing-embed/build/ng-videosharing-embed.min.js"></script>
+        <script type="text/javascript" src="app/utils/badwords.js"></script>
 
         <script src="//cdn.quilljs.com/1.0.0/quill.min.js"></script>
         <script type="text/javascript" src="app/libs/ngQuill/src/ng-quill.js"></script>
