--- a/app/features/Home/home.view.html
+++ b/app/features/Home/home.view.html
@@ -81,7 +81,7 @@
                 </div>
             </div>
 
-            <div class="row height-30px">
+            <div class="row height-30px"  ng-if="home.user.isRedazione()">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="padding-left-20px">
                         <a class="menu_link font-medium color-grey pointer" ui-sref="{{home.ROUTING.segnalazioni.name}}">SEGNALAZIONI</a>
