--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
         <script type="text/javascript" src="app/components/flag/flag.directive.js"></script>
         <script type="text/javascript" src="app/components/mediamodal/mediamodal.component.js"></script>
         <script type="text/javascript" src="app/components/selectmedia/selectmedia.component.js"></script>
+        <script type="text/javascript" src="app/components/publishmodal/publishmodal.component.js"></script>
 
         <!-- FEATURES -->
         <script type="text/javascript" src="app/features/main.controller.js"></script>
